# OllamaMulti-RAG

./: .env.sample  .gitignore  README.md  SECURITY.md  config.yaml  docker-compose.yml  docker-compose_with_ollama.yml  main.py  pyproject.toml  requirements.txt  run-nginx.sh  utils.py
.github/CODEOWNERS/: codeowners.md
.github/DEPENDABOTS/: dependabot.yml
.github/FUNDING/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Ingestion_Pipeline/: Pdf_IngestionPipeline.py
api_Handler/: chat_api_handler.py
assets/meta/: metadata.json  metadata.py
chatTracking/: .gitkeep
database/: database_operations.py  vectordb_handler.py
db/: vectordb_handler.py
docker/: Dockerfile
documents/: releasev1.0.md
ingestionPipeline/: Pdf_IngestionPipeline.py
nginx/: default.conf
utils/: audio_handler.py  html_templates.py  pdf_handler.py  prompt_templates.py
